added new buttons

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     <ul>
        <li>RANDOM NUMBER GUESSER</li>
     </ul>
-    <button> <a href="https://github.com/Elmar099?tab=repositories" target="_blank">Github</a> </button>
-    <p id="number">2</p>
-    <h1>Guess a Number between 0-100</h1>
-    <input type="text">
+    <button> <a href="https://github.com/Elmar099" target="_blank">Github</a> </button>
+    <button id="give">Give Up?</button>
+    <h1>Guess a Number between 0 - 1000</h1>
+    <p id="output"></p>
+    <input type="text" id="userInput"><button id="submit">Enter</button>
+    
+    
 </body>
 </html>
